# smart-tiling

./: .gitignore  CHANGELOG.md  README.md  setup.cfg
.claude/: implement-module.md  setup.md
.github/: release-please-config.json
.github/workflows/: claude.yml  release-please.yml
ai_docs/: README.md  architecture.md  business-logic.md  code-patterns.md  configuration_schema.md  neovim-terminal-spec.md  scroll-ipc-guide.md
smart_tiling/: __about__.py  __init__.py  main.py
smart_tiling/config/: __init__.py  parser.py  schema.py
smart_tiling/core/: __init__.py  context.py  geometry.py  process.py  rules.py  state.py
smart_tiling/scroll/: __init__.py  commands.py  ipc.py  layout.py
smart_tiling/tests/: MANUAL_TESTING.md  __init__.py  test_config_parser.py  test_context.py  test_integration.py  test_rules.py  test_schema.py  test_scroll_layout.py
