[metadata]
name = smart-tiling
version = 0.0.0
author = Piotr Miller
author_email = nwg.piotr@gmail.com
description = Context-aware window tiling for Scroll window manager
url = https://github.com/mecattaf/smart-tiling
project_urls =
    Code=https://github.com/mecattaf/smart-tiling
    Issues=https://github.com/mecattaf/smart-tiling/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    i3ipc
    PyYAML
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel


[options.entry_points]
console_scripts =
    smart-tiling = smart_tiling.main:main
